--- a/index.html
+++ b/index.html
@@ -1,320 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Everyday Store</title>
 
 <style>
-* { box-sizing: border-box; }
-
-body {
-  margin: 0;
-  font-family: cursive;
-  background: linear-gradient(180deg, #050b1f, #0c1430);
-  color: #fff;
+body{
+  margin:0;
+  font-family:Arial;
+  background:linear-gradient(180deg,#050b1f,#0c1430);
+  color:#fff;
 }
-
-/* TOP AUTH */
-#topAuth {
-  position: fixed;
-  top: 12px;
-  left: 12px;
-  z-index: 999999;
+.container{
+  max-width:420px;
+  margin:20px auto;
+  background:rgba(0,0,0,.4);
+  padding:20px;
+  border-radius:18px;
 }
-#topAuth button {
-  background: #1abc9c;
-  color: #fff;
-  border: none;
-  padding: 8px 14px;
-  border-radius: 20px;
-  font-size: 13px;
-  font-weight: bold;
-  cursor: pointer;
+h1{text-align:center;}
+input,select,button{
+  width:100%;
+  padding:12px;
+  margin-top:10px;
+  border-radius:12px;
+  border:none;
 }
-
-/* CONTAINER */
-.container {
-  max-width: 420px;
-  margin: 70px auto 20px;
-  padding: 20px;
-  border-radius: 20px;
-  background: rgba(0,0,0,0.35);
+button{
+  background:#2ecc71;
+  font-weight:bold;
+  cursor:pointer;
 }
-
-/* SLIDER */
-.slider {
-  width: 100%;
-  aspect-ratio: 16 / 9;
-  overflow: hidden;
-  border-radius: 16px;
-  margin-bottom: 15px;
-}
-.slider img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: none;
-  pointer-events: none;
-}
-.slider img.active { display: block; }
-
-h1 { text-align: center; }
-
-input, select, button {
-  width: 100%;
-  padding: 12px;
-  margin: 8px 0;
-  border-radius: 14px;
-  border: none;
-  font-size: 15px;
-}
-
-input, select {
-  background: #111;
-  color: #fff;
-}
-
-button {
-  background: #2ecc71;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-button:active {
-  transform: scale(0.96);
-}
-
-/* QR */
-.qr-box {
-  text-align: center;
-}
-#qrImage {
-  width: 220px;
-  background: #fff;
-  padding: 12px;
-  border-radius: 16px;
-  display: none;
-}
-
-/* INFO */
-.note {
-  text-align: center;
-  font-size: 13px;
-  color: #f1c40f;
-  margin-top: 10px;
-}
-
-#processingBox, #successBox {
-  display: none;
-  text-align: center;
-  margin-top: 12px;
-}
-
-#successBox { color: #2ecc71; }
-
-/* LIVE BUYERS */
-#liveBuyers {
-  margin: 12px 0;
-  padding: 10px;
-  background: rgba(0,0,0,0.45);
-  border-radius: 12px;
-  text-align: center;
-}
-
-/* SOCIAL */
-.social-icons {
-  display: flex;
-  justify-content: center;
-  gap: 14px;
-  margin-top: 20px;
-}
-.social-icons img {
-  width: 44px;
-  height: 44px;
-}
+.qr-box{text-align:center;margin-top:12px}
+#qrImage{width:220px;display:none}
+#processingBox,#successBox{display:none;text-align:center;margin-top:12px}
+.footer{text-align:center;font-size:13px;margin-top:20px;opacity:.9}
+.footer a{color:#2ecc71;text-decoration:none;margin:0 6px}
+#topAuth{position:fixed;top:10px;left:10px;z-index:9999}
 </style>
 </head>
 
 <body>
 
-<!-- TOP LOGIN -->
 <div id="topAuth">
-  <button id="topLoginBtn">Sign In</button>
-  <button id="topLogoutBtn" style="display:none;">Logout</button>
+  <button id="loginBtn">Sign In</button>
+  <button id="logoutBtn" style="display:none">Logout</button>
 </div>
 
 <div class="container">
-
-<div class="slider">
-  <img src="images/banner1.jpg" class="active">
-  <img src="images/banner2.jpg">
-  <img src="images/banner3.jpg">
-</div>
-
 <h1>Everyday Store</h1>
 
-<input type="tel" id="playerID" placeholder="Player ID (8-11 digits)" maxlength="11">
-<input type="tel" id="serverID" placeholder="Server ID (3-5 digits)" maxlength="5">
-<input type="tel" id="mobile" placeholder="Mobile Number" maxlength="10">
+<input id="playerID" placeholder="Player ID">
+<input id="serverID" placeholder="Server ID">
+<input id="mobile" placeholder="Mobile Number">
+<input id="email" placeholder="Email" readonly>
 
-<input type="email" id="email" placeholder="Email (auto-filled from Google)" readonly>
-
-<select id="pack" onchange="updateQR()">
-  <option value="">Select Pack</option>
-  <option value="mlbb-topup/qr/qr-3.png">3 Diamonds - ₹8</option>
-  <option value="mlbb-topup/qr/qr-5.png">5 Diamonds - ₹12</option>
-  <option value="mlbb-topup/qr/qr-11.png">11 Diamonds - ₹23</option>
-  <option value="mlbb-topup/qr/qr-weekly-1.png">Weekly Pass - ₹133</option>
+<select id="pack">
+<option value="">Select Pack</option>
+<option value="3 Diamonds - ₹8">3 Diamonds - ₹8</option>
+<option value="5 Diamonds - ₹12">5 Diamonds - ₹12</option>
+<option value="11 Diamonds - ₹23">11 Diamonds - ₹23</option>
+<option value="Weekly Pass - ₹133">Weekly Pass - ₹133</option>
 </select>
 
 <div class="qr-box">
-  <img id="qrImage" alt="QR Code">
+<img id="qrImage">
 </div>
 
-<div class="note">⚠ QR appears after selecting a pack</div>
+<button id="orderBtn">Order After Payment</button>
 
-<div id="liveBuyers">🟢 Someone purchased Weekly Pass</div>
-
-<a id="mailLink" href="#">
-  <button id="orderBtn">Order After Payment</button>
-</a>
-
-<a href="https://chat.whatsapp.com/IHdIzkLFzgBJkjxjiUVBxD" target="_blank">
-  <button style="background:#25D366;color:#fff;margin-top:10px;">Join WhatsApp Store</button>
-</a>
-
-<div id="processingBox">⏳ Processing your order…</div>
+<div id="processingBox">⏳ Processing order...</div>
 <div id="successBox">
-  ✅ Order placed successfully<br>
-  <b>Order ID:</b> <span id="orderIdText"></span><br>
-  Please tap <b>SEND</b> in Gmail to confirm.
+✅ Order Placed<br>
+<b>Order ID:</b> <span id="orderId"></span><br>
+Status: Pending
 </div>
 
-<div class="social-icons">
-  <a href="https://www.instagram.com/everyday_store_official" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
-  </a>
-  <a href="https://youtube.com/@everydaystore0" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png">
-  </a>
-  <a href="https://wa.me/917679393645" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
-  </a>
+<div class="footer">
+<a href="reviews.html">Reviews</a> |
+<a href="terms.html">Terms</a> |
+Support: <b>7679393645</b>
 </div>
-
 </div>
-
-<!-- NORMAL SCRIPTS -->
-<script>
-function updateQR() {
-  const pack = document.getElementById("pack");
-  const qr = document.getElementById("qrImage");
-  if (!pack.value) {
-    qr.style.display = "none";
-    return;
-  }
-  qr.src = "https://everydaystore.github.io/" + pack.value;
-  qr.style.display = "block";
-}
-
-const buyers = [
-  "🟢 Someone bought 55 Diamonds",
-  "🟢 Weekly Pass purchased",
-  "🟢 Someone bought 172 Diamonds",
-  "🟢 Weekly Pass purchased just now"
-];
-let i = 0;
-setInterval(() => {
-  document.getElementById("liveBuyers").innerText = buyers[i++ % buyers.length];
-}, 3500);
-
-const slides = document.querySelectorAll(".slider img");
-let s = 0;
-setInterval(() => {
-  slides[s].classList.remove("active");
-  s = (s + 1) % slides.length;
-  slides[s].classList.add("active");
-}, 3000);
-</script>
 
 <!-- FIREBASE -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import {
-  getAuth,
-  GoogleAuthProvider,
-  signInWithPopup,
-  signInWithRedirect,
-  signOut,
-  onAuthStateChanged
-} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } 
+from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore, collection, addDoc, serverTimestamp } 
+from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 const firebaseConfig = {
-  apiKey: "AIzaSyB7ZSS8879-gQFikwUqy4y0rDja7DzboK",
+  apiKey: "AIzaSyB7ZS8S879-gQFikWqy4yOrDja7DzboK",
   authDomain: "everyday-store-6debb.firebaseapp.com",
   projectId: "everyday-store-6debb"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
+const db = getFirestore(app);
 const provider = new GoogleAuthProvider();
 
-function doGoogleLogin() {
-  const isMobile = /Android|iPhone|iPad/i.test(navigator.userAgent);
-  isMobile
-    ? signInWithRedirect(auth, provider)
-    : signInWithPopup(auth, provider);
-}
+loginBtn.onclick = () => signInWithPopup(auth, provider);
+logoutBtn.onclick = () => signOut(auth);
 
-document.addEventListener("DOMContentLoaded", () => {
-  document.getElementById("topLoginBtn").onclick = doGoogleLogin;
-  document.getElementById("topLogoutBtn").onclick = () => signOut(auth);
-});
-
-onAuthStateChanged(auth, user => {
-  const emailInput = document.getElementById("email");
-  if (user) {
-    topLoginBtn.style.display = "none";
-    topLogoutBtn.style.display = "inline-block";
-    emailInput.value = user.email;
-  } else {
-    topLoginBtn.style.display = "inline-block";
-    topLogoutBtn.style.display = "none";
-    emailInput.value = "";
+onAuthStateChanged(auth,user=>{
+  if(user){
+    loginBtn.style.display="none";
+    logoutBtn.style.display="block";
+    email.value=user.email;
+  }else{
+    loginBtn.style.display="block";
+    logoutBtn.style.display="none";
+    email.value="";
   }
 });
 
-document.getElementById("orderBtn").addEventListener("click", () => {
-  if (!auth.currentUser) {
-    alert("Please sign in with Google first");
+pack.onchange=()=>{
+  if(pack.value){
+    qrImage.src="https://everydaystore.github.io/mlbb-topup/qr/default.png";
+    qrImage.style.display="block";
+  }else qrImage.style.display="none";
+};
+
+orderBtn.onclick = async ()=>{
+  if(!auth.currentUser){
+    alert("Sign in first");
     return;
   }
 
-  const orderId = "ORD-" + Date.now();
-  document.getElementById("orderIdText").innerText = orderId;
+  if(!playerID.value || !serverID.value || !mobile.value || !pack.value){
+    alert("Fill all details");
+    return;
+  }
 
-  const subject = encodeURIComponent("MLBB Order Confirmation");
-  const body = encodeURIComponent(
-    "Order ID: " + orderId +
-    "\nEmail: " + auth.currentUser.email +
-    "\n\nPlease confirm my payment."
-  );
+  processingBox.style.display="block";
 
-  const mailto =
-    "mailto:everydaystore@gmail.com?subject=" + subject + "&body=" + body;
+  const oid="ORD-"+Date.now();
 
-  // 🔥 SET LINK FIRST
-  document.getElementById("mailLink").href = mailto;
+  await addDoc(collection(db,"orders"),{
+    orderId:oid,
+    email:auth.currentUser.email,
+    playerID:playerID.value,
+    serverID:serverID.value,
+    mobile:mobile.value,
+    pack:pack.value,
+    status:"pending",
+    created:serverTimestamp()
+  });
 
-  // UI feedback
-  document.getElementById("processingBox").style.display = "block";
-
-  setTimeout(() => {
-    document.getElementById("processingBox").style.display = "none";
-    document.getElementById("successBox").style.display = "block";
-  }, 1200);
-});
+  processingBox.style.display="none";
+  successBox.style.display="block";
+  orderId.innerText=oid;
+};
 </script>
 
 </body>
